--- a/mystyle.css
+++ b/mystyle.css
@@ -182,3 +182,45 @@ section{
         padding: 1rem 3rem;
     }
 }
+
+
+
+
+
+/* ส่วน OurFuture */
+.container{
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+    border-radius: 15px;
+}
+
+.left {
+    left: 10%;
+}
+
+.right {
+    left: 35%;
+}
+
+.textbox {
+    background-color: rgb(248, 248, 248);
+    position: relative;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.idiom{
+    margin: 100px;
+    text-align: center;
+}
+
+.OFH{
+    background-image: url(resources/pxfuel.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
