--- a/mystyle.css
+++ b/mystyle.css
@@ -210,9 +210,74 @@ section {
     }
 }
 
+/*ส่วนของ form*/
 
-
-
+.form-container {
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #c62922;
+    border-radius: 5px;
+  }
+  
+  .form-container h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
+  .form-group label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .form-group input[type="text"],
+  .form-group input[type="email"],
+  .form-group select,
+  .form-group textarea{
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  .form-group input[type="radio"]{
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .form-group textarea {
+    resize: vertical;
+  }
+  
+  .form-group select {
+    width: 100%;
+  }
+  
+  .form-group input[type="submit"] {
+    background-color: #ca6f25;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .form-group {
+    position: relative;
+  }
+  
+  .error {
+    color: darkred;
+    display: block;
+    margin-top: 5px;
+  }
+  
 /* ส่วนของ OurFutureHilights */
 .container {
     display: flex;
