--- a/mystyle.css
+++ b/mystyle.css
@@ -209,6 +209,67 @@ section {
         padding: 1rem 3rem;
     }
 }
+/*home.html ของแต่ละคน*/
+
+.contianerdata{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section1{
+    position: relative;
+    max-width: 900px;
+    width: 100%;
+    padding: 50px 0  ;
+    background-color: #ffffff;
+}
+
+.section1 .images{
+    height: 180px;
+    width: 180px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.section1 .slide{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.slide p{
+    text-align: center;
+    padding: 0 160px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.slide .bxs-down-arrow{
+    font-size: 30px;
+}
+
+.slide .pooh{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pooh .name {
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+
+}
+
+.pooh .stnumber {
+    font-size: 13px;
+    font-weight: 400;
+    color: #000;
+
+}
 
 /*ส่วนของ form*/
 
