--- a/mystyle.css
+++ b/mystyle.css
@@ -508,7 +508,9 @@ footer .footer-content h4{
     background-position: center;
     min-height: 100vh;
 }
-
+#sixth{
+    margin-bottom: 100px;
+}
 
 
 
