--- a/mystyle.css
+++ b/mystyle.css
@@ -310,25 +310,38 @@ footer .footer-content h4{
 }
 
 .footer-content a{
+    display: inline-block;
     color: #fff;
     margin-right: .5rem;
+    margin-bottom: 1.5rem;
+    transition: all .40s ease;
 }
 
-.footer-content a::before{
-    content: '';
-    position: absolute;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 100%;
-    width: 0;
-    height: 2px;
-    background: #f18930;
-    transition-duration: .5s;
+.footer-content a:hover{
+    color: #c62922;
+    transform: translateY(-3px) translateX(-5px);
 }
 
-.footer-content a::hover::before{
-    width: 70px;
+.footer-content i{
+    margin-right: 1rem;
+    font-size: 22px;
+    color: #fff;
 }
+
+@media (max-width:1690px){
+    footer{
+        padding:3rem 5% 2rem
+    }
+}
+
+@media (max-width:1120px){
+    footer{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+        gap: 2rem;
+    }
+}
+
 /*ส่วนของ form*/
 
 .form-container {
