--- a/mystyle.css
+++ b/mystyle.css
@@ -50,6 +50,7 @@ header .logo img:hover {
 
 header .nav {
     display: flex;
+    font-size: 18px;
 }
 
 header .nav li {
@@ -64,23 +65,60 @@ header .nav li:last-child {
     margin-right: 0;
 }
 
+header .toggle_btn{
+    color: #fff;
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
+}
+
+header .dropdown_menu{
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    height: 0px;
+    width: 200px;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    border-radius: 10px;
+    overflow: hidden;
+    font-size: 14px;
+    display: none;
+    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+header .dropdown_menu.open{
+    height: 120px;
+}
+
+header .dropdown_menu li{
+    padding: 0.7rem;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media (max-width:1000px) {
     header {
         padding: 1rem 3rem;
     }
+    header .nav{
+        display: none;
+    }
+
+    header .toggle_btn{
+        display: block;
+    }
+
+    header .dropdown_menu{
+        display: block;
+    }
 }
 
-@media (max-width:700px) {
-    header {
-        flex-direction: column;
-    }
-
-    header .logo {
-        margin-bottom: 1rem;
-    }
-
-    header .nav li {
-        margin: 0 7px;
+@media (max-width:578px){
+    header .dropdown_menu{
+        left: 2rem;
+        width: unset;
     }
 }
 
