--- a/mystyle.css
+++ b/mystyle.css
@@ -248,6 +248,67 @@ section {
         padding: 1rem 3rem;
     }
 }
+/*home.html ของแต่ละคน*/
+
+.contianerdata{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section1{
+    position: relative;
+    max-width: 900px;
+    width: 100%;
+    padding: 50px 0  ;
+    background-color: #ffffff;
+}
+
+.section1 .images{
+    height: 180px;
+    width: 180px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.section1 .slide{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.slide p{
+    text-align: center;
+    padding: 0 160px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.slide .bxs-down-arrow{
+    font-size: 30px;
+}
+
+.slide .data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.data .name {
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+
+}
+
+.data .stnumber {
+    font-size: 13px;
+    font-weight: 400;
+    color: #000;
+
+}
 
 /* ส่วนของ footer */
 
@@ -398,9 +459,7 @@ footer .footer-content h4{
 
 #display-area p {
   margin: 5px 0;
-  color: whitesmoke;
-  word-wrap: break-word;
-  white-space: pre-wrap;
+  color: #f5f5f5;
 }
 
 .display-area_container {
@@ -594,30 +653,16 @@ footer .footer-content h4{
 
 
 /* index */
-body {
-    font-family: 'Kanit', sans-serif;
-    background: #bdc3c7;
-    color: #34495e;
-  }
-
-.containerdata{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .slider{
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 370px;
     overflow: hidden;
 }
 .item{
     position: absolute;
-    width: 250px;
-    height: 400px;
+    width: 200px;
+    height: 320px;
     text-align: justify;
     background-color: #fff;
     border-radius: 10px;
@@ -626,61 +671,6 @@ body {
     left: calc(50% - 110px);
     top: 0;
 }
-
-.item h1{
-    text-align: center;
-    padding: 0 px;
-}
-
-
-.item .images{
-    height: 100px;
-    width: 100px;
-    object-fit: cover;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-}
-
-.item .bxs-down-arrow{
-    font-size: 30px;
-    text-align: center;
-}
-
-.item .data{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.slide p{
-    text-align: center;
-    padding: 0 160px;
-    font-size: 14px;
-    font-weight: 400;
-}
-
-
-.item .name {
-    margin: 10px 0;
-    row-gap:20px;
-    font-size: 15px;
-    font-weight: 1000;
-    color: #000;
-
-}
-
-.item .stnumber {
-    font-size: 13px;
-    font-weight: 400;
-    color: #000;
-
-}
-
-
-
-
 #next, #prev{
     position: absolute;
     top: 40%;
@@ -696,4 +686,3 @@ body {
     left: unset;
     right: 400px;
 }
-
