--- a/mystyle.css
+++ b/mystyle.css
@@ -748,17 +748,30 @@ footer .footer-content h4 {
 
 
 /* index */
-.slider {
-    position: relative;
+body {
+    font-family: 'Kanit', sans-serif;
+    background: #bdc3c7;
+    color: #34495e;
+  }
+
+.containerdata{
+    height: 100vh;
     width: 100%;
-    height: 370px;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.item {
+.slider{
+    position: relative;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+}
+.item{
     position: absolute;
-    width: 200px;
-    height: 320px;
+    width: 250px;
+    height: 400px;
     text-align: justify;
     background-color: #fff;
     border-radius: 10px;
@@ -768,8 +781,61 @@ footer .footer-content h4 {
     top: 0;
 }
 
-#next,
-#prev {
+.item h1{
+    text-align: center;
+    padding: 0 px;
+}
+
+
+.item .images{
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.item .bxs-down-arrow{
+    font-size: 30px;
+    text-align: center;
+}
+
+.item .data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.slide p{
+    text-align: center;
+    padding: 0 160px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+
+.item .name {
+    margin: 10px 0;
+    row-gap:20px;
+    font-size: 15px;
+    font-weight: 1000;
+    color: #000;
+
+}
+
+.item .stnumber {
+    font-size: 13px;
+    font-weight: 400;
+    color: #000;
+
+}
+
+
+
+
+#next, #prev{
     position: absolute;
     top: 40%;
     color: #fff;
@@ -780,8 +846,8 @@ footer .footer-content h4 {
     font-weight: bold;
     left: 400px;
 }
-
-#next {
+#next{
     left: unset;
     right: 400px;
 }
+
