--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -146,11 +148,13 @@ section {
 }
 
 .box {
+    font-family: "Doto", sans-serif;
     position: relative;
     justify-content: center;
     min-height: 100vh;
     color: #fff;
     text-align: center;
+    font-size: 60px;
 }
 
 .box video {
