--- a/mystyle.css
+++ b/mystyle.css
@@ -580,6 +580,12 @@ footer .footer-content h4 {
     }
 }
 
+@keyframes flip {
+    100% {
+        transform: rotateY(360deg);
+    }
+}
+
 .left {
     margin-left: 10%;
     border: 3px solid #185c6f;
@@ -644,6 +650,7 @@ footer .footer-content h4 {
     text-align: center;
     font-size: 40px;
     color: rgb(255, 255, 255);
+    animation: flip 3s;
 }
 
 .OFH {
