--- a/mystyle.css
+++ b/mystyle.css
@@ -770,8 +770,8 @@ body {
 }
 .item{
     position: absolute;
-    width: 250px;
-    height: 400px;
+    width: 300px;
+    height: 475px;
     text-align: justify;
     background-color: #fff;
     border-radius: 10px;
@@ -779,6 +779,7 @@ body {
     transition: 0.5s;
     left: calc(50% - 110px);
     top: 0;
+    line-height: 1.4;
 }
 
 .item h1{
@@ -797,22 +798,21 @@ body {
     margin-bottom: 10px;
 }
 
-.item .bxs-down-arrow{
-    font-size: 30px;
-    text-align: center;
-}
+
 
 .item .data{
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
-.slide p{
+.data .p{
     text-align: center;
     padding: 0 160px;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: 400;
+    margin: 10px 0;
 }
 
 
@@ -867,10 +867,10 @@ body {
     }
 
     #prev {
-        left: 20px; 
+        left: 30px; 
     }
 
     #next {
-        right: 20px; 
+        right: 30px; 
     }
 }
