--- a/mystyle.css
+++ b/mystyle.css
@@ -875,6 +875,10 @@ body {
     left: 400px;
 }
 
+#next:hover, #prev:hover {
+    transform: scale(1.5);
+}
+
 /* Mobile */
 @media (max-width: 768px) {
     #next,
