--- a/mystyle.css
+++ b/mystyle.css
@@ -189,7 +189,7 @@ section {
 
 .box h3 {
     margin-bottom: 3rem;
-    font-size: 20pt;
+    font-size: 40px;
     -webkit-box-reflect: below 1px linear-gradient(transparent, #000);
     line-height: 0.35em;
     outline: none;
@@ -238,6 +238,7 @@ section {
     text-transform: uppercase;
     border: 4px solid #fff;
     transition: all .5s;
+    font-size: 30px;
 }
 
 .box a.boxBtn:hover {
@@ -257,11 +258,12 @@ section {
     }
 
     .box h3 {
-        font-size: 28px;
+        font-size: 32px;
     }
 
     .box a.boxBtn {
         padding: 1rem 2rem;
+        font-size: 24px;
     }
 }
 
@@ -271,11 +273,12 @@ section {
     }
 
     .box h3 {
-        font-size: 20px;
+        font-size: 24px;
     }
 
     .box a.boxBtn {
         padding: .5rem 1rem;
+        font-size: 20px;
     }
 }
 
@@ -353,17 +356,34 @@ section {
 }
 
 .data .name {
-    font-size: 14px;
-    font-weight: 600;
+    font-size: 10px;
     color: #000;
 }
 
 .data .stnumber {
+    font-size: 1px;
+
+    color: #000;
+
+}
+
+.item .name {
+    margin: 10px 0;
+    row-gap:20px;
+    font-size: 15px;
+    font-weight: 1000;
+    color: #000;
+
+}
+
+.item .stnumber {
     font-size: 13px;
     font-weight: 400;
     color: #000;
 
 }
+
+
 
 /* Desktop  */
 #next,
@@ -392,14 +412,19 @@ section {
     color: #c55852;
 }
 
-/* Mobile */
-@media (max-width: 768px) {
-    #next,
-    #prev {
-       
+@media (max-width: 1524px) {
+    .slider {
+        width: 85%;
+    }
+
+    .slider .item {
+        width: 250px; 
+    }
+
+    #next, #prev {
         top: 50%;
         transform: translateY(-50%);
-        font-size: xxx-large;
+        font-size: 2.5rem; 
     }
 
     #prev {
@@ -407,7 +432,84 @@ section {
     }
 
     #next {
-        right: 30px; 
+        right: 30px;
+    }
+}
+
+/* tablet */
+@media (max-width: 768px) {
+    .slider {
+        width: 90%; 
+    }
+
+    .slider .item {
+        width: 250px;
+    }
+
+    .slider .item .images{
+        width: 120px; 
+        height: 120px;
+    }
+
+    .slider .item h1 {
+        font-size: 18px;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: .5rem;
+    }
+
+    .data i,a{
+        font-size: 14px;
+    }
+
+    .data li,p{
+        font-size: 12px;
+        margin-bottom: 1px;
+    }
+
+
+    #next, #prev {
+        top: 50%; 
+        transform: translateY(-50%);
+        font-size: 2rem; 
+    }
+
+    #prev {
+        left: 20px; 
+    }
+
+    #next {
+        right: 20px;
+    }
+}
+
+/* mobile */
+
+@media (max-width: 480px) {
+
+    .slider {
+        width: 95%; 
+    }
+    
+
+    .slider .item {
+        width: 200px;
+    }
+
+    .data i,a{
+        font-size: 12px;
+    }
+    .item .name{
+        font-size: 13px;
+    }
+
+    .item .stnumber{
+        font-size: 12px;
+    }
+
+
+    #next, #prev {
+        font-size: 1.5rem; 
     }
 }
 
@@ -916,22 +1018,6 @@ body {
     margin: 10px 0;
 }
 
-
-.item .name {
-    margin: 10px 0;
-    row-gap:20px;
-    font-size: 15px;
-    font-weight: 1000;
-    color: #000;
-
-}
-
-.item .stnumber {
-    font-size: 13px;
-    font-weight: 400;
-    color: #000;
-
-}
 
 
 
