--- a/mystyle.css
+++ b/mystyle.css
@@ -10,6 +10,12 @@
     scroll-behavior: smooth;
 }
 
+body {
+    font-family: 'Kanit', sans-serif;
+    background: #bdc3c7;
+    color: #34495e;
+}
+
 /* header-nav */
 ul {
     list-style: none;
@@ -285,7 +291,11 @@ section {
 
 /*home.html ของแต่ละคน*/
 
-.contianerdata {
+.nameh {
+    font-family: "Monoton", sans-serif;
+}
+
+.containerdata {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -298,11 +308,12 @@ section {
 .slider {
     display: flex;
     transition: transform 0.5s ease;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 80%; 
+    height: 500px;
     width: 100%;
     overflow: hidden; 
     flex-direction: row;
@@ -319,6 +330,11 @@ section {
     flex-direction: column;
     align-items: center;
     padding: 1rem;
+    left: calc(50% - 110px);
+    top: 0;
+    line-height: 1.4;
+    transition: 0.5s;
+    position: absolute;
 }
 
 
@@ -328,6 +344,7 @@ section {
     object-fit: cover;
     border-radius: 50%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    margin-bottom: .5rem;
 }
 
 
@@ -336,6 +353,11 @@ section {
     font-weight: bold;
     color: #333;
     margin-bottom: .5rem;
+}
+
+.item .data{
+    display: flex;
+    flex-direction: column;
 }
 
 .data li,p{
@@ -362,7 +384,6 @@ section {
 
 .data .stnumber {
     font-size: 1px;
-
     color: #000;
 
 }
@@ -652,6 +673,10 @@ footer .footer-content h4 {
     font-family: 'Kanit';
 }
 
+.form-group input[type="submit"]:hover{
+    background-color: #f5524a;
+}
+
 /* ตัว*แดง */
 .required {
     padding: 3px;
@@ -859,7 +884,6 @@ footer .footer-content h4 {
     bottom: 20px;
     right: 20px;
     background-color: #332d2db9;
-    color: #fff;
     padding: .75rem 1.25rem;
     border: none;
     border-radius: 10px;
@@ -868,7 +892,10 @@ footer .footer-content h4 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: all 0.25s ease 0s;
 }
-
+.backtotopbutton p{
+    color: #fff;
+    text-transform: capitalize;
+}
 .backtotopbutton img {
     width: 1rem;
     display: none;
@@ -952,79 +979,4 @@ footer .footer-content h4 {
 }
 
 
-/* index */
-body {
-    font-family: 'Kanit', sans-serif;
-    background: #bdc3c7;
-    color: #34495e;
-  }
 
-.containerdata{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.slider{
-    position: relative;
-    width: 100%;
-    height: 500px;
-    overflow: hidden;
-}
-.item{
-    position: absolute;
-    width: 300px;
-    height: 475px;
-    text-align: justify;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    transition: 0.5s;
-    left: calc(50% - 110px);
-    top: 0;
-    line-height: 1.4;
-}
-
-.item h1{
-    text-align: center;
-    padding: 0 px;
-}
-
-
-.item .images{
-    height: 100px;
-    width: 100px;
-    object-fit: cover;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-}
-
-
-
-.item .data{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.data .p{
-    text-align: center;
-    padding: 0 160px;
-    font-size: 10px;
-    font-weight: 400;
-    margin: 10px 0;
-}
-
-
-
-
-
-
-.nameh {
-    font-family: "Monoton", sans-serif;
-}
