--- a/mystyle.css
+++ b/mystyle.css
@@ -778,6 +778,56 @@ footer .footer-content h4 {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+}
+
+.modal-content p{
+    font-size: 20px;
+}
+
+.modal-button {
+    padding: .75rem 1.25rem;
+    margin: 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.modal-button.yes {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.modal-button.no {
+    background-color: #f44336;
+    color: white;
+}
+
+.modal-button:hover {
+    opacity: 0.8;
+}
+
 /* ส่วนของ OurFutureHilights */
 .container {
     display: flex;
